WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198687
Integrate dark mode support for iOS
https://bugs.webkit.org/show_bug.cgi?id=198687
Summary
Integrate dark mode support for iOS
Timothy Hatcher
Reported
2019-06-07 21:40:57 PDT
Put iOS dark mode support in the open source.
Attachments
Patch
(29.27 KB, patch)
2019-06-08 21:55 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(35.98 KB, patch)
2019-06-08 23:05 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(35.94 KB, patch)
2019-06-08 23:11 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(36.78 KB, patch)
2019-06-09 13:19 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(37.01 KB, patch)
2019-06-09 13:45 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(36.49 KB, patch)
2019-06-09 18:48 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-06-07 21:41:06 PDT
<
rdar://problem/51545643
>
Timothy Hatcher
Comment 2
2019-06-08 21:55:55 PDT
Comment hidden (obsolete)
Created
attachment 371702
[details]
Patch
Timothy Hatcher
Comment 3
2019-06-08 23:05:27 PDT
Comment hidden (obsolete)
Created
attachment 371704
[details]
Patch
EWS Watchlist
Comment 4
2019-06-08 23:06:57 PDT
Comment hidden (obsolete)
Attachment 371704
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/ios/LocalCurrentTraitCollection.mm:30: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 30 files If any of these errors are false positives, please file a bug against check-webkit-style.
Timothy Hatcher
Comment 5
2019-06-08 23:11:32 PDT
Comment hidden (obsolete)
Created
attachment 371705
[details]
Patch
Tim Horton
Comment 6
2019-06-08 23:38:58 PDT
Comment on
attachment 371705
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371705&action=review
> Source/JavaScriptCore/Configurations/FeatureDefines.xcconfig:119 > +ENABLE_DARK_MODE_CSS_iphonesimulator = ENABLE_DARK_MODE_CSS;
Probably iosmac too?
Timothy Hatcher
Comment 7
2019-06-09 13:19:17 PDT
Comment hidden (obsolete)
Created
attachment 371709
[details]
Patch
Timothy Hatcher
Comment 8
2019-06-09 13:45:12 PDT
Comment hidden (obsolete)
Created
attachment 371712
[details]
Patch
Timothy Hatcher
Comment 9
2019-06-09 18:48:41 PDT
Created
attachment 371715
[details]
Patch
Tim Horton
Comment 10
2019-06-10 11:25:24 PDT
Comment on
attachment 371715
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
> Source/WebCore/platform/graphics/cocoa/FontCascadeCocoa.mm:133 > + styleConfiguration.appearanceName = coreContext.useDarkAppearance() ? @"UIAppearanceDark" : @"UIAppearanceLight";
No constants for these?
Timothy Hatcher
Comment 11
2019-06-10 11:49:30 PDT
(In reply to Tim Horton from
comment #10
)
> Comment on
attachment 371715
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
> > > Source/WebCore/platform/graphics/cocoa/FontCascadeCocoa.mm:133 > > + styleConfiguration.appearanceName = coreContext.useDarkAppearance() ? @"UIAppearanceDark" : @"UIAppearanceLight"; > > No constants for these?
Sadly not.
WebKit Commit Bot
Comment 12
2019-06-10 12:19:22 PDT
Comment on
attachment 371715
[details]
Patch Clearing flags on attachment: 371715 Committed
r246270
: <
https://trac.webkit.org/changeset/246270
>
WebKit Commit Bot
Comment 13
2019-06-10 12:19:24 PDT
All reviewed patches have been landed. Closing bug.
Frédéric Wang Nélar
Comment 14
2019-07-10 08:49:03 PDT
Comment on
attachment 371715
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
@Timothy: I get various build failure for missing API when building with the latest XCode 11 beta 3 (FontCascadeCocoa.mm, LocalCurrentTraitCollection.mm and RenderThemeIOS.mm ). Is it something expected?
> Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h:167 > ++ (UIColor *)tableCellDefaultSelectionTintColor;
I'm not familiar with Objective C but this is causing a build failure for me with XCode 11 beta 3, that I can workaround by moving this above the NS_ASSUME_NONNULL_END statement.
Frédéric Wang Nélar
Comment 15
2019-07-10 08:49:44 PDT
(In reply to Frédéric Wang (:fredw) from
comment #14
)
> Comment on
attachment 371715
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
> > @Timothy: I get various build failure for missing API when building with the > latest XCode 11 beta 3 (FontCascadeCocoa.mm, LocalCurrentTraitCollection.mm > and RenderThemeIOS.mm ).
(in OS_DARK_MODE_SUPPORT sections)
Timothy Hatcher
Comment 16
2019-07-10 10:13:49 PDT
Comment on
attachment 371715
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
>> Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h:167 >> ++ (UIColor *)tableCellDefaultSelectionTintColor; > > I'm not familiar with Objective C but this is causing a build failure for me with XCode 11 beta 3, that I can workaround by moving this above the NS_ASSUME_NONNULL_END statement.
Moving to NS_ASSUME_NONNULL_END section or adding a new section of START and END likely is the right fix. File a new bug with the build errors and we can take a look.
Timothy Hatcher
Comment 17
2019-07-10 18:55:17 PDT
(In reply to Timothy Hatcher from
comment #16
)
> Comment on
attachment 371715
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
> > >> Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h:167 > >> ++ (UIColor *)tableCellDefaultSelectionTintColor; > > > > I'm not familiar with Objective C but this is causing a build failure for me with XCode 11 beta 3, that I can workaround by moving this above the NS_ASSUME_NONNULL_END statement. > > Moving to NS_ASSUME_NONNULL_END section or adding a new section of START and > END likely is the right fix. File a new bug with the build errors and we can > take a look.
Bug 199481
tracks making WebKit build with the public SDK.
Frédéric Wang Nélar
Comment 18
2019-07-11 00:32:26 PDT
(In reply to Timothy Hatcher from
comment #17
)
> (In reply to Timothy Hatcher from
comment #16
) > > Comment on
attachment 371715
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=371715&action=review
> > > > >> Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h:167 > > >> ++ (UIColor *)tableCellDefaultSelectionTintColor; > > > > > > I'm not familiar with Objective C but this is causing a build failure for me with XCode 11 beta 3, that I can workaround by moving this above the NS_ASSUME_NONNULL_END statement. > > > > Moving to NS_ASSUME_NONNULL_END section or adding a new section of START and > > END likely is the right fix. File a new bug with the build errors and we can > > take a look. > >
Bug 199481
tracks making WebKit build with the public SDK.
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug