Source/WebKit/UIProcess/ios/WKPasswordView.mm
@@ -35,16 +35,6 @@
 #import <wtf/RetainPtr.h>
 #import <wtf/text/WTFString.h>
 
-#if USE(APPLE_INTERNAL_SDK) && __has_include(<WebKitAdditions/WKPasswordViewAdditions.mm>)
-#include <WebKitAdditions/WKPasswordViewAdditions.mm>
-#else
-static void configureScrollView(UIScrollView *scrollView)
-{
-    [scrollView setBackgroundColor:[UIColor groupTableViewBackgroundColor]];
-}
-#endif
-
-
 const CGFloat passwordEntryFieldPadding = 10;
 
 @interface WKPasswordView () <UIDocumentPasswordViewDelegate>
@@ -111,7 +101,11 @@ const CGFloat passwordEntryFieldPadding = 10;
     [_scrollView setZoomScale:1];
     [_scrollView setContentSize:self.frame.size];
 
-    configureScrollView(_scrollView.get());
+#if HAVE(OS_DARK_MODE_SUPPORT)
+    [_scrollView setBackgroundColor:UIColor.systemGroupedBackgroundColor];
+#else
+    [_scrollView setBackgroundColor:UIColor.groupTableViewBackgroundColor];
+#endif
 
     [scrollView addSubview:self];
 }
